--- a/client/assets/css/common.css
+++ b/client/assets/css/common.css
@@ -40,3 +40,33 @@
     padding: 20px 25px !important;
 }
 
+
+@-webkit-keyframes spinner-grow{
+    0%{
+        -webkit-transform:scale(0);
+        transform:scale(0)
+    }
+    50%{
+        opacity:1
+    }
+}
+@keyframes spinner-grow{
+    0%{
+        -webkit-transform:scale(0);
+        transform:scale(0)
+    }
+    50%{
+        opacity:1
+    }
+}
+.spinner-grow{
+    display:inline-block;
+    width:2rem;
+    height:2rem;
+    vertical-align:text-bottom;
+    background-color:currentColor;
+    border-radius:50%;
+    opacity:0;
+    -webkit-animation:spinner-grow .75s linear infinite;
+    animation:spinner-grow .75s linear infinite
+}
