--- a/client/assets/css/common.css
+++ b/client/assets/css/common.css
@@ -64,9 +64,10 @@
     width:2rem;
     height:2rem;
     vertical-align:text-bottom;
-    background-color:currentColor;
+    background-color:#fff;
     border-radius:50%;
     opacity:0;
     -webkit-animation:spinner-grow .75s linear infinite;
     animation:spinner-grow .75s linear infinite
 }
+
