--- a/client/assets/css/common.css
+++ b/client/assets/css/common.css
@@ -14,6 +14,11 @@
 .d-flex{
     display: flex !important;
 }
+
+.d-none{
+    display: none !important;
+}
+
 .space-bw{
     justify-content: space-between;
 }
@@ -38,6 +43,15 @@
 }
 .model-pd{
     padding: 20px 25px !important;
+}
+
+.model-pd2{
+    padding: 10px 0px !important;
+}
+
+.pd-lr-25{
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .model-pd-16{
@@ -97,7 +111,107 @@
     animation:spinner-grow .75s linear infinite
 }
 
+.title-next-box{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, .6);
+}
+
+.section-list{
+    max-height: 300px;
+    overflow-y: scroll;
+}
+
+.section-block{
+    display: flex;
+    align-items: center;
+    margin-bottom: 3px;
+    padding: 6px 25px;
+    border-radius: 4px;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.section-avatar{
+    height: 45px;
+    width: 45px;
+    margin: 0 10px 0 0;
+    border-radius: 50%;
+}
+
+.section-name{
+    font-size: .85rem;
+    font-weight: 500;
+    color: #393a4f;
+}
+
+.position-r{
+    position: relative;
+}
+
+.post-loader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: .7;
+    z-index: 10;
+}
+
+.post-loader .spinner-grow{
+     background: #1a72ff;
+     width: 5rem;
+     height: 5rem;
+}
+
+bg-1a72ff{
+   background: #1a72ff;    
+}
+
+
+.button-big{
+    height: 46px;
+    font-size: .95rem !important;
+}
 
 .pl-0{
   padding-left: 0px !important;
 }
+
+.wd-160px{
+    width: 160px;
+}
+
+
+
+.upload-btn-wrapper {
+    position: relative;
+    cursor: pointer;
+  }
+ 
+  .upload-btn{
+    background: #0d58c8;
+    border: 1px solid #0d58c8;
+    padding: 10px 15px;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 400;
+    color: #fff;
+   }
+  .upload-btn-wrapper input[type=file] {
+   font-size: 100px;
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   left: 0;
+   top: 0;
+   opacity: 0;
+   cursor: pointer;
+   }
