--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -3336,30 +3336,21 @@ button.button{
 .like-wrapper .like-button.is-active i.is-liked{
     display:block
 }
-.fab-wrapper.is-share a{
-    /* background:#1a72ff; */
-    border: 1.6px solid #1a72ff;
-    color: #1a72ff;
-    /* box-shadow:0 14px 26px -12px rgba(0,98,255,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(0,98,255,0.2) !important */
-}
-.fab-wrapper.is-share a:hover{
-    background:#1a72ff;
-}
-.fab-wrapper.is-share a:hover svg{
-    stroke:#fff
-}
-.fab-wrapper.is-comment a{
+
+.fab-wrapper.post-action div{
     /* background:#1a72ff; */
     /* box-shadow:0 14px 26px -12px rgba(0,98,255,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(0,98,255,0.2) !important */
     border: 1.6px solid #1a72ff;
     color: #1a72ff;
 }
-.fab-wrapper.is-comment a:hover{
+.fab-wrapper.post-action div:hover{
     background:#1a72ff;
 }
-.fab-wrapper.is-comment a:hover svg{
+.fab-wrapper.post-action div:hover svg{
     stroke:#fff
 }
+
+
 .fab-wrapper .small-fab{
     display:-ms-flexbox;
     display:flex;
