--- a/client/assets/css/common.css
+++ b/client/assets/css/common.css
@@ -253,3 +253,10 @@ bg-1a72ff{
 .comment-media-left{
     margin-right: .5rem;
 }
+
+.disabled-red{
+    box-shadow: 0 14px 26px -12px rgba(255,95,89,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(255,95,89,0.2) !important;
+    opacity: 0.8;
+    pointer-events:none;
+    cursor:default !important
+}
