--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -127,9 +127,9 @@
 /*! _layout.scss | Friendkit | Â© Css Ninja. 2018-2019 */
 body{
     background:#f4f4f4 !important;
-    /* height:100%;
+    height:100%;
     width:100%;
-    min-height:100vh; */
+    min-height:100vh;
     font-family:Roboto,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif;
     color:#344258
 }
