--- a/client/assets/css/common.css
+++ b/client/assets/css/common.css
@@ -351,3 +351,8 @@ bg-1a72ff{
 .inline{
     display: inline !important;
 }
+
+.tabs a:hover{
+    border-bottom-color: #fff;
+    /* color: #; */
+}
