--- a/client/assets/css/common.css
+++ b/client/assets/css/common.css
@@ -365,14 +365,14 @@ bg-1a72ff{
     line-height: 80px;
     right: 16px;
     font-size: 40px;
-    font-weight: 400;
+    font-weight: 300;
     /* top: calc(100vh - 120px ); */
     bottom: 90px;
     background: #0062ff;
     border-color: #0062ff;
     color: #fcfcfc;
     border-radius: 100%;
-    box-shadow: 0 14px 26px -12px rgba(0,98,255,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(0,98,255,0.2) !important;
+    box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12);
 }
 .upload-fixed:hover{
     color: #fcfcfc;
