--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -19866,7 +19866,7 @@ pre{
 }
 
 @media screen and (min-width: 768px){
-    .view-wrapper{
+    .post-list-container{
         z-index:100;
     }
     .post-size{
