--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -94,6 +94,59 @@ button.button {
     color: #fff;
 }
 
+
+
+
+.textarea {
+    display: block;
+    max-width: 100%;
+    min-width: 100%;
+    padding: 0.625em;
+    resize: vertical;
+}
+.input, .textarea {
+    box-shadow: none !important;
+}
+
+
+.textarea[rows] {
+    height: initial;
+}
+
+
+.input, .textarea, .select select {
+    background-color: #fff;
+    border-color: #dbdbdb;
+    border-radius: 4px;
+    color: #363636;
+}
+
+.input, .textarea {
+    box-shadow: inset 0 1px 2px rgba(10,10,10,0.1);
+    max-width: 100%;
+    width: 100%;
+}
+
+.input, .textarea {
+    box-shadow: none !important;
+}
+
+.input {
+    transition: all .3s;
+}
+
+.input:focus {
+    border-color: #0062ff;
+}
+.input:focus, .textarea:focus, .select select:focus, .is-focused.input, .is-focused.textarea, .select select.is-focused, .input:active, .textarea:active, .select select:active, .is-active.input, .is-active.textarea, .select select.is-active{
+    border-color: #3273dc;
+    box-shadow: 0 0 0 0.125em rgba(50,115,220,0.25);
+}
+
+.field:not(:last-child) {
+    margin-bottom: 0.75rem;
+}
+
 /* PAGELOADER */
 
 @media (max-width: 767px){
@@ -331,7 +384,6 @@ button.button {
     position: relative;
 }
 
-
 .navbar .navbar-brand .navbar-item {
     display: flex;
     justify-content: center;
@@ -340,21 +392,45 @@ button.button {
     min-width: 58px;
 }
 
-
-
 .navbar .navbar-brand .navbar-item img{
     width:120px;
     height:auto;
  }
 
+ @media screen and (min-width: 1024px){
+    .navbar .navbar-item.is-account {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        margin-left: 16px;
+        cursor: pointer;
+    }
+}
+.navbar .navbar-item.is-account .user-image {
+    position: relative;
+    max-height: 38px;
+}
+.navbar .navbar-item.is-account img {
+    height: 38px;
+    width: 38px;
+    max-height: 38px;
+    border-radius: 50%;
+}
 
 
 
+.text-error {
+    border-color: #FF7273 !important;
+    padding-right: 40px;
+}
 
+.control.has-validation.has-error input {
+    border-color: #FF7273;
+}
 
-
-
-
+.login-wrapper .form-wrapper .login-form .field .control .input:focus {
+    border-color: #0062ff;
+}
 
 
 
@@ -1119,6 +1195,11 @@ button.button {
     height: 32px !important;
     padding: 8px 22px;
 }
+
+.share-modal .card-body .shared-publication {
+    margin-top: 20px;
+}
+
 /* END MODELS */
 
 
@@ -1216,6 +1297,9 @@ a:hover {
 .uppercase {
     text-transform: uppercase !important;
 }
+.text-center {
+    text-align: center;
+}
 .no-border {
     border: none;
 }
@@ -1296,7 +1380,250 @@ span {
         display:none !important
     }
 }
-
+.wd-160px {
+    width: 160px;
+}
+.button-big {
+    height: 46px;
+    font-size: .95rem !important;
+}
+.model-pd2 {
+    padding: 10px 0px !important;
+}
+.is-disabled{
+    pointer-events:none;
+    opacity:0.4;
+    cursor:default !important
+}
 /* END COMMON CLASS*/
 
+/* SELECT SECTION */
+.section-list {
+    max-height: 300px;
+    overflow-y: scroll;
+}
+.section-block {
+    display: flex;
+    align-items: center;
+    margin-bottom: 3px;
+    padding: 6px 25px;
+    border-radius: 4px;
+    justify-content: space-between;
+    cursor: pointer;
+}
+.section-avatar {
+    height: 45px;
+    width: 45px;
+    margin: 0 10px 0 0;
+    border-radius: 50%;
+}
+.section-name {
+    font-size: .85rem;
+    font-weight: 500;
+    color: #393a4f;
+}
+.round-checkbox{
+    position:relative
+}
+.round-checkbox>div{
+    display:flex;
+    align-items:center
+}
+.round-checkbox label{
+    background-color:#fff;
+    border:1px solid #ccc;
+    border-radius:50%;
+    cursor:pointer;
+    height:28px;
+    left:0;
+    position:absolute;
+    top:0;
+    width:28px;
+    transition:all .3s
+}
+.round-checkbox label:after{
+    border:2px solid #fff;
+    border-top:none;
+    border-right:none;
+    content:"";
+    height:6px;
+    left:7px;
+    opacity:0;
+    position:absolute;
+    top:8px;
+    transform:rotate(-45deg);
+    width:12px
+}
+.round-checkbox input[type="checkbox"]{
+    position:absolute;
+    top:0;
+    left:0;
+    height:100%;
+    width:100%;
+    opacity:0
+}
+.round-checkbox input[type="checkbox"]:checked+label{
+    background-color:#0062ff;
+    border-color:#0062ff
+}
+.round-checkbox input[type="checkbox"]:checked+label:after{
+    opacity:1
+}
+.round-checkbox.is-blue input[type="checkbox"]:checked+label{
+    background-color:#039BE5;
+    border-color:#039BE5
+}
 
+.round-checkbox.is-small{
+    height:22px;
+    width:22px
+}
+.round-checkbox.is-small label{
+    height:22px;
+    width:22px
+}
+.round-checkbox.is-small label:after{
+    left:4px;
+    top:4.5px;
+    width:13px;
+    height:8px;
+    transform:rotate(-45deg) scale(0.65)
+}
+/* END SELECT SECTION  */
+
+.login-wrapper .form-wrapper {
+    margin: 0 auto;
+}
+
+@media (max-width: 767px){
+    .login-wrapper .form-wrapper {
+        /* min-width: 320px !important; */
+    }
+}
+
+
+.upload-btn-wrapper {
+    position: relative;
+    cursor: pointer;
+  }
+ 
+.upload-btn{
+    background: #0d58c8;
+    border: 1px solid #0d58c8;
+    padding: 10px 15px;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 400;
+    color: #fff;
+}
+.upload-btn-wrapper input[type=file] {
+    font-size: 100px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+
+
+
+
+
+.login-wrapper .form-wrapper .login-form .field .control .input {
+    height: 40px;
+    /* padding-left: 40px; */
+}
+.control.has-validation .error-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    /* height: 36px; */
+    /* width: 36px; */
+    height: 40px;
+    width: 40px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-align: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity .3s;
+}
+.control.has-validation.has-error .error-icon {
+    opacity: 1;
+    cursor: pointer;
+}
+.control.has-validation .error-icon svg {
+    height: 16px;
+    width: 16px;
+    stroke: #FF7273;
+}
+
+.title-next-box {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, .6);
+}
+.featured-image {
+    max-height: 250px;
+    overflow: hidden;
+}
+
+
+/* UPLAOD LOADER */
+.post-loader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: .7;
+    z-index: 10;
+}
+.post-loader .spinner-grow{
+     background: #1a72ff;
+     width: 6rem;
+     height: 6rem;
+}
+.bg-1a72ff{
+    background: #1a72ff;    
+}
+@-webkit-keyframes spinner-grow{
+    0%{
+        -webkit-transform:scale(0);
+        transform:scale(0)
+    }
+    50%{
+        opacity:1
+    }
+}
+@keyframes spinner-grow{
+    0%{
+        -webkit-transform:scale(0);
+        transform:scale(0)
+    }
+    50%{
+        opacity:1
+    }
+}
+.spinner-grow{
+    display:inline-block;
+    width:2rem;
+    height:2rem;
+    vertical-align:text-bottom;
+    background-color:#fff;
+    border-radius:50%;
+    opacity:0;
+    -webkit-animation:spinner-grow .75s linear infinite;
+    animation:spinner-grow .75s linear infinite
+}
+/* UPLAOD LOADER */
