--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -110,7 +110,7 @@
     src: local('Roboto Medium'), local('Roboto-Medium'), url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmEU9fBBc4AMP6lQ.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
-  
+
 *, *::before, *::after {
     box-sizing: inherit;
 }
@@ -1045,10 +1045,25 @@ button.button {
         border: 1.6px solid #1a72ff;
         color: #1a72ff;
     }
+    .post-action a.share-fb svg {
+        fill:#fff;
+    }
     .small-fab svg {
         width: 18px;
         height: 18px;
         transition: all .3s;
+    }
+
+    .share-fb {
+        width: auto;
+        background: #3b5998;
+        color: #fff;
+        border-color: #3b5998;
+        padding: 0 10px 0 10px;
+    }
+    .share-fb:hover{
+        background-color: #4c70ba;
+        color: #fff
     }
     .load-more-button{
         box-sizing:border-box;
